--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.19.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^6.10.0"
+    "mongoose": "^6.10.0",
+    "nodemailer": "^6.9.15"
   }
 }
